Fixed alignment of links and images, fixed broken links and added colour to page

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-.main{
-    background-color:beige;
-    height: 1000px
-}
 
 .title{
     color:black;
@@ -11,25 +7,36 @@
     padding: 10px;
 }
 
-.link{
-    font-size:24px;
-    color:black;
-    display: inline-block;
-    border: 1px solid black;
-    margin-top: 150px;
-    margin-left: 210px;
-    margin-right: 210px
-}
-
 .title,
 .link{
     font-family:sans-serif;
 }
 
+.link{
+    font-size:24px;
+    text-align: center;
+    color:black;
+    display: block;
+
+}
+
 img {
-    display:inline-block;
+    display:block;
     width: 300px;
-    height: auto;
+    height: 300px;
+    margin: auto;
+}
+
+.recipe {
+    display: inline-block;
+    padding: 30px;
     margin-top: 20px;
-    margin-left: 170px;
+    margin-left: 200px;
+
+}
+
+.contents {
+    background-color:bisque;
+    border: 1px solid black;
+    margin-top: 20px;
 }
